--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
         <button type="button" class="btn-outline-grad">LOGIN</button>
       </div>
     </div>
+
+    <div class="master-div">
+      <h1>Animated button</h1>
+      <div class="btn-rotating-outer">
+        <div class="btn-square-1">
+          <div class="btn-square-2">
+            <div class="btn-text">Submit</div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 
   <style>
